--- a/.github/workflows/build-deploy-jekyll-vanilla.yml
+++ b/.github/workflows/build-deploy-jekyll-vanilla.yml
@@ -5,7 +5,7 @@ name: Build & Deploy Jekyll Site with Vanilla Setup
 on:
   push:
     branches:
-      - main
+      - gh-pages
   workflow_dispatch:  # ← permite ejecución manual desde la interfaz
 
 jobs:
@@ -35,5 +35,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
-          publish_branch: main
+          publish_branch: gh-pages
           force_orphan: true
