--- a/.github/workflows/build-deploy-jekyll-vanilla.yml
+++ b/.github/workflows/build-deploy-jekyll-vanilla.yml
@@ -5,7 +5,7 @@ name: Build & Deploy Jekyll Site with Vanilla Setup
 on:
   push:
     branches:
-      - gh-pages
+      - main
   workflow_dispatch:  # ← permite ejecución manual desde la interfaz
 
 jobs:
