--- a/.github/workflows/build-deploy-jekyll-vanilla.yml
+++ b/.github/workflows/build-deploy-jekyll-vanilla.yml
@@ -8,6 +8,12 @@ on:
       - main
   workflow_dispatch:  # ← permite ejecución manual desde la interfaz
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
