--- a/.github/workflows/build-deploy-jekyll-vanilla.yml
+++ b/.github/workflows/build-deploy-jekyll-vanilla.yml
@@ -1,45 +1,45 @@
 # .github/workflows/build-and-deploy.yml
 
-name: Build & Deploy Jekyll Site with Vanilla Setup
+# name: Build & Deploy Jekyll Site with Vanilla Setup
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:  # ← permite ejecución manual desde la interfaz
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:  # ← permite ejecución manual desde la interfaz
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+# # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
 
-jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   build-deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2' # O ajusta según tu entorno local
+#       - name: Set up Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: '3.2' # O ajusta según tu entorno local
 
-      - name: Install Jekyll and Bundler
-        run: |
-          gem install bundler
-          bundle config set path 'vendor/bundle'
-          bundle install
+#       - name: Install Jekyll and Bundler
+#         run: |
+#           gem install bundler
+#           bundle config set path 'vendor/bundle'
+#           bundle install
 
-      - name: Build Jekyll site
-        run: bundle exec jekyll build --source ./ --destination ./_site
+#       - name: Build Jekyll site
+#         run: bundle exec jekyll build --source ./ --destination ./_site
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          publish_dir: ./_site
-          publish_branch: gh-pages
-          force_orphan: true
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GH_PAT }}
+#           publish_dir: ./_site
+#           publish_branch: gh-pages
+#           force_orphan: true
